tried adding the shadow, but it's cut off. fixed an image. testing out the order of justworks page

--- a/global.css
+++ b/global.css
@@ -63,6 +63,10 @@ body {
     display: block;
     margin: 0 auto;
     width: 1100px;
+    -moz-box-shadow: 0px 30px 64px 0px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 30px 64px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 30px 64px 0px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .project-details {
